Bug 669151 - LDAP connections are not cleaned up until shutdown; r=bienvenu